--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,6 +5,7 @@ jobs:
     build:
         runs-on: ubuntu-latest
         steps:
-        -  if:  "${{ toJson(github.repository) }}" == "xxxutsavdixit/test2ndweek"
-           echo : "this si tes hnm"
+           if:  "${{ toJson(github.repository) }}" == "xxxutsavdixit/test2ndweek"
+           run: |
+              echo : "this si tes hnm"
  
