--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,6 +10,14 @@ on:
                     - red
                     - blue
                     - green
+            days:
+                required: true
+                type: choice
+                description: "type days"
+                options:
+                    - mon
+                    - tues
+
 
 jobs:
     build:
@@ -19,7 +27,8 @@ jobs:
         run: |
                 echo "Print the color ${{github.event.inputs.color}}"
                 echo "Print the color ${{github.event_name }}"
-                echo "Print the value ${{github.event.input.color.required}}"
+                echo "Print the value ${{github.event.input.days}}"
+                
 
 
 
