--- a/.github/workflows/07-expressions.yaml
+++ b/.github/workflows/07-expressions.yaml
@@ -20,7 +20,7 @@ jobs:
               echo "This is branch name ${{github.sha}}"
               echo "This is branch name ${{runner.os}}"
         - name: "[debug] Print when triggered from main"
-          if: ${{ inputs.debug}}  && ${{github.ref}} == 'refs/heads/main'
+          if: ${{ inputs.debug && github.ref}} == 'refs/heads/main'
           run:  |
                echo "I was triggered from main"
 
