--- a/.github/workflows/09-functions.yaml
+++ b/.github/workflows/09-functions.yaml
@@ -7,7 +7,10 @@ jobs:
        runs-on: ubuntu-latest
        steps:
             - name: Failing step
-              run: exit 0  
+              shell: bash
+              run:
+                   sleep 20 
+                   exit 1
                
             - name: I will be skipped
               if: ${{success()}}
