--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,31 +1,10 @@
 name: This is workflow
 on:   
     workflow_dispatch:
-         inputs:
-            color:
-                description: "Please select the color"
-                type: choice
-                required: false
-                options:
-                    - red
-                    - blue
-                    - green
-            days:
-                required: true
-                type: choice
-                description: "type days"
-                options:
-                    - mon
-                    - tues
-
 
 jobs:
     build:
      runs-on: ubuntu-latest
      steps:
-      - name: print the color name
-        if: ${{inputs.color  == 'red'}} 
-        run: |
-                echo "Print the color ${{github.event.inputs.color}}"
-                echo "Print the color ${{github.event_name }}"
-                echo "Print the value ${{github.event.inputs.days}}"
+        - name: test
+          run:   "${{tojson(github)}}"
