--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,4 +7,4 @@ jobs:
      runs-on: ubuntu-latest
      steps:
         - name: test
-          run:  echo  "${{tojson(github)}}"
+          run:  echo  "${{fromjson(github)}}"
