--- a/.github/workflows/09-functions.yaml
+++ b/.github/workflows/09-functions.yaml
@@ -6,6 +6,19 @@ jobs:
     echo1:
        runs-on: ubuntu-latest
        steps:
+            - name: Print PR title
+              run:  echo PR title is ${{github.event.pull_request.title}}
+
+            - name: Print PR labels
+              run:
+                 cat << EOF
+                   ${{toJson(github.event.pull_request.labels)}}
+                  EOF
+
+            - name: Bug step
+              if: ${{ !cancelled() && contains(github.event.pull_request.title, 'fix')}}
+              run: echo "I am an bug fix"
+
             - name: Failing step
               shell: bash
               run: sleep 20 
