--- a/.github/workflows/10-execution-flow.yaml
+++ b/.github/workflows/10-execution-flow.yaml
@@ -17,9 +17,9 @@ jobs:
             - name: Running unit tests
               run: echo "Running tests..."
             - name: Failing tests
-              if: ${{inputs.pass-unit-tests}}
+              if: ${{!inputs.pass-unit-tests}}
               run: |
-                    exit 0
+                    exit 1
 
     deploy-nonprod:
         runs-on: ubuntu-latest
