--- a/.github/workflows/10-execution-flow.yaml
+++ b/.github/workflows/10-execution-flow.yaml
@@ -18,8 +18,7 @@ jobs:
               run: echo "Running tests..."
             - name: Failing tests
               if: ${{!inputs.pass-unit-tests}}
-              run: |
-                    exit 1
+              run: exit 1
 
     deploy-nonprod:
         runs-on: ubuntu-latest
