--- a/.github/workflows/10-execution-flow.yaml
+++ b/.github/workflows/10-execution-flow.yaml
@@ -10,7 +10,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: Lint and build
-              run: echo ""Linting and building project"                    
+              run: echo "Linting and building project"                    
     unit-tests:
         runs-on: ubuntu-latest
         steps:
