--- a/.github/workflows/10-execution-flow.yaml
+++ b/.github/workflows/10-execution-flow.yaml
@@ -6,6 +6,13 @@ on:
                     type: boolean
                     default: false
 jobs:
+
+    test:
+        runs-on: ubuntu-latest
+        steps:
+            - name: testtt
+              run: ${{github}}
+
     lint-build:
         runs-on: ubuntu-latest
         steps:
