--- a/.github/workflows/11-inputs.yaml
+++ b/.github/workflows/11-inputs.yaml
@@ -10,6 +10,7 @@ on:
             target:
                 description: "Which environment the workflow will target"
                 required: true
+                type: environment
             tag:
                 description: "Release from which to build and deploy"
                 type: choice
